--- a/endpoints/getting-started-grpc/container-engine.yaml
+++ b/endpoints/getting-started-grpc/container-engine.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: esp-echo
+  name: grpc-hello
 spec:
   ports:
   - port: 80
@@ -23,23 +23,23 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: esp-echo
+    app: grpc-hello
   type: LoadBalancer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: esp-echo
+  name: grpc-hello
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: esp-echo
+        app: grpc-hello
     spec:
       containers:
       - name: esp
-        image: gcr.io/endpoints/endpoints-runtime:1
+        image: gcr.io/endpoints-release/endpoints-runtime:1
         args: [
           "-P", "9000",
           "-a", "grpc://127.0.0.1:50051",
